<resources>
    <string name="app_name">MobileSoftware_FinalProject1</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_username_or_e_mail_address">Enter username or e-mail address.</string>
    <string name="e_g_johndoe_students_kennesaw_edu">e.g. johndoe@students.kennesaw.edu</string>
    <string name="enter_password">Enter password</string>
    <string name="username_or_email">username or email</string>
    <string name="password">password</string>
    <string name="start_here">Start Here</string>
    <string name="learning_modules">Learning Modules</string>
    <string name="welcome">Welcome</string>
    <string name="syllabus">Syllabus</string>
    <string name="project_instructions">Project Instructions</string>
    <string name="lab_report_instructions">Lab Report Instructions</string>
    <string name="welcome_fragment_text">Welcome to CS 4322 Mobile Application Development!  This is Mrs. Wang and I am looking forward to meeting you all. During this course, you will learn mobile application development environments, platforms, architecture, design and security.
\n\nPlease review the Syllabus before you start the first module.

\n\nCourse schedule can be found in the  Syllabus. The detailed content for each learning module can also be found at "Learning Modules".</string>
    <string name="lab_instructions_details">For each lab, please follow the lab manual instruction.

    At the end of each lab activity, please screenshot your lab results in the coding IDE.

    Then, paste all the screenshots into a document,

    Name your lab as “ YourLastName_Lab_X_Report”, such as “Wang_Lab_2_Report”

        Convert it into a PDF file to upload in the D2L.</string>
    <string name="project_instructions_details">CS 4322 Group Project


You can work on the project(s) as a group of two or three members.

You can create your own mobile app, or you can choose CS4322 Mobile App (see below).


CS4322 Mobile App


Description:

This project is to develop an Android Mobile App to access the learning material of this course. The mobile app should mimic the organization of the course material in the same modular way as in the D2L web course system. The specifications include:

A top-level module “Start Here” with sub-modules:

“Welcome”

“Syllabus”

“Lab Report Instruction”

“Project Instruction”

Another top-level module, “Learning Modules”, with 13 lesson sub-modules, and each sub-module has two children sub-modules:

“Slides”

“Lab”

User registration and authentication (This can be implemented as the last step since we will talk about the data and security in the last week, but you are highly encouraged to do your research to have it done in advance.)

You are allowed to be creative in the UI designs.


Submissions:

A midterm report (presentation slides) that should include

A mock design of all the UI.

The flowchart of the coding-level design with classes/functions, if possible.


A final report (presentation slides) that should include

The complete implementation

A prototype App to demo

The report presentations are scheduled as in the syllabus.


Grading Rubrics:

UI Friendliness (25%)

Functionalities (40%)

Presentation and Communications (10%)</string>
    <string name="project_proposal">Project Proposal </string>
    <string name="kennesaw_state">Kennesaw State</string>
    <string name="u_n_i_v_e_r_s_i_t_y">U N I V E R S I T Y</string>
    <string name="nsyllabus_ncollege_of_computing_and_software_engineering_ndepartment_of_computer_science_ncs_4322_01_mobile_software_development_nacademic_term_spring_2023">SYLLABUS\nCOLLEGE OF COMPUTING AND SOFTWARE ENGINEERING \nDEPARTMENT OF COMPUTER SCIENCE \nCS 4322/01: MOBILE SOFTWARE DEVELOPMENT \nACADEMIC TERM: SPRING 2023</string>
    <string name="course_information">Course Information</string>
    <string name="class_meeting_time_t_r_11_00am_12_15pmlocation_atrium_building_215b">Class meeting time: T/R 11:00am -12:15pm\nLocation: Atrium Building 215B</string>
    <string name="instructor_information">Instructor Information</string>
    <string name="name_lingyan_wangemail_lwang40_kennesaw_eduoffice_location_atrium_building_room_j_305_marietta_campus_office_hours_9_30am_10_30am_ttr_or_by_appointment_preferred_method_of_communication_email_via_d2l">Name: Lingyan WangEmail: lwang40@kennesaw.edu\nOffice Location: Atrium Building Room J-305 (Marietta Campus) \nOffice Hours: 9:30am-10:30am( TTR )or by appointment. \nPreferred method of communication: email via D2L.</string>
    <string name="course_description">Course Description</string>
    <string name="catalog_description"><u>Catalog Description</u></string>
    <string name="coverage_of_software_development_for_the_android_mobile_application_platform_topics_include_ui_design_for_mobile_apps_resource_management_for_mobile_apps_and_deployment_of_mobile_apps">Coverage of software development for the Android Mobile Application Platform. Topics include UI Design for Mobile Apps, Resource Management for Mobile Apps, and Deployment of Mobile Apps.</string>
    <string name="prerequisites_cs3410_and_cs4306"><u>Prerequisites:</u> CS3410 and CS4306</string>
    <string name="credit_hours_3_0_3"><u>Credit Hours:</u> 3–0–3</string>
    <string name="required_texts_none">Required Texts: None</string>
    <string name="required_texts_nonereference_web_resources_1_https_developer_android_com_courses_android_development_with_kotlin_course_utm_source_dac_utm_medium_website_utm_campaign_edu2_https_developer_android_com_courses_android_basics_kotlin_course">Reference Web Resources:\n\n\    1)https://developer.android.com/courses/android-development-with-kotlin/course?utm_source=dac&amp;utm_medium=website&amp;utm_campaign=edu\n    2)https://developer.android.com/courses/android-basics-kotlin/course</string>
    <string name="course_materials">Course Materials</string>
    <string name="after_successful_completion_of_this_course_a_student_will_be_able_to_1_use_android_development_environment_and_platforms2_design_a_user_interface_for_a_mobile_device3_use_android_development_libraries_to_develop_mobile_apps4_test_mobile_apps">After successful completion of this course, a student will be able to:\n\n        1.Use Android Development Environment and Platforms\n        2.Design a user interface for a mobile device\n        3.Use Android Development Libraries to develop mobile apps\n        4.Test mobile apps</string>
    <string name="learning_outcomes">Learning Outcomes</string>
    <string name="course_requirements_and_assignments">Course Requirements and Assignments</string>
    <string name="homework_quizzes_and_exams_will_be_given_numerical_scores_these_scores_will_be_averaged_at_the_end_of_the_semester_using_the_following_weighting">Homework, quizzes, and exams will be given numerical scores. These scores will be averaged at the end of the semester using the following weighting:</string>
    <string name="assignment">Assignment</string>
    <string name="points_percentage_or_measurement">Points, percentage or measurement</string>
    <string name="lab_assignments">Lab Assignments</string>
    <string name="_35">35%</string>
    <string name="exams_quizzes">Exams/Quizzes</string>
    <string name="_25">25%</string>
    <string name="project">Project</string>
    <string name="participation">Participation</string>
    <string name="_5">5%</string>
    <string name="homework_submission_copying_or_paraphrasing_codes_from_other_sources_or_other_students_will_be_considered_a_violation_of_the_student_code_of_conduct_due_dates_for_homework_assignments_will_be_specified_on_the_homework_themselves_no_late_submission_is_accepted"> <b>Homework Submission:</b> Copying or paraphrasing codes from other sources or other students will be considered a violation of the Student Code of Conduct. Due dates for homework assignments will be specified on the homework themselves. <b>No late submission is accepted.</b></string>
    <string name="lab_assignment_submission_each_lab_assignment_is_required_to_be_accomplished_in_the_corresponding_lab_session_no_late_submission_is_accepted"><b>Lab Assignment Submission:</b> each lab assignment is required to be accomplished in the corresponding lab session. No late submission is accepted.</string>
    <string name="evaluation_and_grading_policies">Evaluation and Grading Policies</string>
    <string name="course_policies_details"><b>Feedback in a Timely Manner:</b> The instructor will ONLY reply to e–mails that are sent using D2L email system. Please allow your instructor 24–48 hours before replying back to your email.\n\n <b>Attendance Policy:</b> Regular attendance is expected; please notify me in advance if you will be unable to attend because of business travel or other valid reason. If a student misses 2 or more than 2 classes, the student\'s final grade may be decreased.\n\n<b>Homework Submission:</b> Copying or paraphrasing codes from other sources or other students will be considered a violation of the Student Code of Conduct. Due dates for homework assignments will be specified on the homework themselves. No late submission is accepted.\n\n<b>Quiz/Exam Policy:</b> In most cases, quizzes will be administered during the first 10–20 minutes of class. Students who are late to class on a day when a quiz is administered will not be given extra time to complete the quiz. Makeup quizzes/exams WILL NOT be given without provable evideance.\n\n<b>Electronic Devices and Classroom Behavior Policy:</b> In order to minimize the level of distraction, all beepers and cellular phones must be on quiet mode during class meeting times. Students who wish to use a computer/PDA for note taking need prior approval of the instructor since key clicks and other noises can distract other students. Recording of lectures by any method requires prior approval of the instructor. Students using a laptop in class should not check their email, browse the web, or in other way detract from the focus of the class.\n\nStudents are reminded to conduct themselves in accordance with the Student Code of Conduct (KSU Student Code of Conduct, Section III), as published in the Undergraduate and Graduate Catalogs. Every KSU student is responsible for upholding the provision. Students who are in violation of KSU policy will be asked to leave the classroom and may be subject to disciplinary action by the University.\n\n<b>Tutoring:</b> The College of Computing and Software Engineering offers some tutoring services for certain courses. If this applies to your course, you may want to include this resource for your students. Tutoring info can be found here: http://ccse.kennesaw.edu/ccselabs/ccse-tutoring.php.\n\n <b>Faculty Conversations:</b> In preparation for the conversations with CS faculty about the research process/method, students must complete assigned background reading. There will articles or book chapters assigned per class. In addition to the assigned articles or chapters, students should review the background information on the professor.\n\n<b>Withdrawal Policy:</b> The last day to withdraw without academic penalty is March 14, 2023. Ceasing to attend class or oral notice thereof DOES NOT constitute official withdrawal from the course. Students who simply stop attending classes without officially withdrawing usually are assigned failing grades. Students wishing to withdraw after the scheduled change period (add/drop) must obtain and complete a withdrawal form from the Academic Services Department in the Registrar\'s Office.</string>
    <string name="sign_up">Sign Up</string>
</resources>