<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FirstFragment"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            tools:context=".FirstFragment"><![CDATA[


            />



            ]]>

            <Button
                android:id="@+id/button_first"
                android:layout_width="117dp"
                android:layout_height="65dp"
                android:layout_marginBottom="264dp"
                android:backgroundTint="#95C99B"
                android:fontFamily="@font/lato_bold"
                android:text="@string/log_in"
                android:textColor="@color/md_theme_light_onBackground"
                android:textSize="20sp"
                app:cornerRadius="@dimen/fab_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textview_first"
                android:layout_width="169dp"
                android:layout_height="80dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/sign_in"
                android:fontFamily="@font/bree_serif"
                android:importantForAutofill="no"
                android:text="@string/sign_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColorHint="@color/md_theme_light_onBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/enter_password"
                android:ems="10"
                android:fontFamily="@font/lato"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/button_first"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.194"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
                app:layout_constraintVertical_bias="0.467"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/editTextTextEmailAddress2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/enter_username_or_e_mail_address"
                android:ems="10"
                android:fontFamily="@font/lato"
                android:hint="@string/username_or_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.203"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_first"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>