<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonWelcome"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:backgroundTint="@color/md_theme_light_tertiary"
                android:fontFamily="@font/lato"
                android:text="@string/welcome"
                android:textSize="20sp"
                app:cornerRadius="@dimen/fab_margin"
                app:layout_constraintBottom_toTopOf="@+id/buttonSyllabus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.604" />

            <Button
                android:id="@+id/buttonSyllabus"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginBottom="408dp"
                android:backgroundTint="@color/md_theme_light_tertiary"
                android:fontFamily="@font/lato"
                android:text="@string/syllabus"
                android:textSize="20sp"
                app:cornerRadius="@dimen/fab_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/buttonLabReport"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginTop="155dp"
                android:layout_marginBottom="139dp"
                android:backgroundTint="@color/md_theme_light_tertiary"
                android:fontFamily="@font/lato"
                android:maxHeight="30dp"
                android:text="@string/lab_report_instructions"
                android:textSize="20sp"
                app:cornerRadius="@dimen/fab_margin"
                app:layout_constraintBottom_toTopOf="@+id/buttonProject"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonSyllabus"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/buttonProject"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/md_theme_light_tertiary"
                android:fontFamily="@font/lato"
                android:text="@string/project_instructions"
                android:textSize="20sp"
                app:cornerRadius="@dimen/fab_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>